<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/profile_image"
        android:layout_width="@dimen/details_image_size"
        android:layout_height="@dimen/details_image_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:placeholderImage="@drawable/ic_person_placeholder"
        app:actualImageScaleType="fitCenter"/>

    <TextView
        android:id="@+id/user_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_name"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profile_image"
        />

    <TextView
        android:id="@+id/user_name"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintBaseline_toBaselineOf="@id/user_name_label"
        app:layout_constraintStart_toEndOf="@id/user_name_label"
        tools:context="com.makaroffandrey.stackoverflowusersexample.ui.UserDetailFragment" />
    <android.support.constraint.Barrier
        android:id="@+id/barrier_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="user_name,user_name_label"/>
    <TextView
        android:id="@+id/user_id_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_id"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_name"
        />

    <TextView
        android:id="@+id/user_id"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintBaseline_toBaselineOf="@id/user_id_label"
        app:layout_constraintStart_toEndOf="@id/user_id_label"
        tools:context="com.makaroffandrey.stackoverflowusersexample.ui.UserDetailFragment" />
    <android.support.constraint.Barrier
        android:id="@+id/barrier_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="user_id,user_id_label"/>
    <TextView
        android:id="@+id/user_reputation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_reputation"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_id"
        />

    <TextView
        android:id="@+id/user_reputation"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintBaseline_toBaselineOf="@id/user_reputation_label"
        app:layout_constraintStart_toEndOf="@id/user_reputation_label"
        tools:context="com.makaroffandrey.stackoverflowusersexample.ui.UserDetailFragment" />
    <android.support.constraint.Barrier
        android:id="@+id/barrier_reputation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="user_reputation,user_reputation_label"/>
    <TextView
        android:id="@+id/user_location_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_location"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_reputation"
        />

    <TextView
        android:id="@+id/user_location"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintBaseline_toBaselineOf="@id/user_location_label"
        app:layout_constraintStart_toEndOf="@id/user_location_label"
        tools:context="com.makaroffandrey.stackoverflowusersexample.ui.UserDetailFragment" />
    <android.support.constraint.Barrier
        android:id="@+id/barrier_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="user_location,user_location_label"/>
    <TextView
        android:id="@+id/user_creation_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_creation_date"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier_location"
        />

    <TextView
        android:id="@+id/user_creation"
        style="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textIsSelectable="true"
        android:layout_margin="@dimen/text_margin"
        app:layout_constraintBaseline_toBaselineOf="@id/user_creation_label"
        app:layout_constraintStart_toEndOf="@id/user_creation_label"
        tools:context="com.makaroffandrey.stackoverflowusersexample.ui.UserDetailFragment" />

</android.support.constraint.ConstraintLayout>
